# ring-artifact-unet

./: README.md  inference.py  inference_fpn.py  pyproject.toml  train.py
data_modules/: tiff_data.py
models/: __init__.py  dense_unet.py  dense_unet_gradloss.py  fpn_residual_dense_unet.py  fpn_residual_dense_unet_gradloss.py  residual_dense_unet.py  residual_dense_unet_gradloss.py  vanilla_unet.py
synthetic_data/: generate.py
synthetic_data/models/: base.py  cube.py  mobius_strip.py  octahedron.py  plate.py  tetrahedron.py  torus.py  vase.py
